# semaphore

./: Cargo.toml  README.md  README.pt-BR.md  index.html  onboarding.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: ci.yml
adapters/claude-code/: README.md
adapters/cursor/: README.md
crates/sem-core/src/: config.rs
crates/semctl/: Cargo.toml
crates/semctl/src/: deploy.rs  doctor.rs  install.rs  lib.rs  main.rs
scripts/: prepare-semctl.mjs
src/: i18n.ts  main.ts  onboarding.css  onboarding.ts  settings.css  settings.ts  sounds.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
stream-deck/: tsconfig.json
stream-deck/src/: ipc.test.ts
