[package]
name = "semctl"
description = "CLI client for Semaphore hook integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "semctl"
path = "src/lib.rs"

[[bin]]
name = "semctl"
path = "src/main.rs"

[dependencies]
sem-core = { path = "../sem-core" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
